# server-me-daddy

./: Cargo.toml  bash
api/: Cargo.toml  build.rs
api/src/: lib.rs
functions/: Cargo.toml
functions/src/: args.rs  error.rs  flags.rs  lib.rs  system_child_io.rs
src/: main.rs  templates.rs
templates/: index.html
