workspace = { members = ["api"] }
[package]
name = "server-me-daddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum", "mime", "markdown"] }
axum = { version = "0.7.4", features = ["ws", "http2", "macros"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"

[profile.dev.package."*"]
opt-level = 3
